fix: go.mod + currencies + swag data
